# AE_pythonMiddle_3Module

13_lesson/: main.py  безымянный.tiled-session
14_lesson/: main.py  map.py  settings.py
lesson_15/: main.py  player.py  pyproject.toml
lesson_16/maps/: карта._вода.csv
lesson_17/: main.py  map.py  npc.py  player.py
lesson_17/maps/: карта._земля.csv
lesson_18/: main.py  npc.py
lesson_19/: main.py  player.py  savegame.json
lesson_20/: enemy.py  main.py  map.py  player.py  savegame.json  settings.py
lesson_20/maps/: only-terrain.tsx  карта.tmx
lesson_21/: main.py  map.py
lesson_22/: main.py  map.py  player.py
lesson_23/: main.py  map.py  player.py
lesson_24/: enemy.py  main.py  map.py  player.py
